fix: arabic alignment of toggle

--- a/src/component/MyWallet/UseMyWallet/UseMyWallet.style.scss
+++ b/src/component/MyWallet/UseMyWallet/UseMyWallet.style.scss
@@ -50,6 +50,7 @@
   border-radius: 16px;
   position: relative;
   transition: background-color 0.3s;
+  margin-inline-end: 6px;
 }
 
 .switch.on {
@@ -57,8 +58,13 @@
   box-shadow: 0 0 2px rgba(67, 67, 67, 1);
   border: 1px solid rgba(67, 67, 67, 1);
   .toggle {
-    transform: translateX(12px);
     border: 1px solid #000000;
+  }
+  .toggleEn {
+    transform: translateX(12px);
+  }
+  .toggleAr {
+    transform: translateX(-12px);
   }
 }
 .switch.off {
